# proj_ezapp

./: .gitignore  LICENSE
files/: copyright
files/apps/: layout
files/apps/Clock/: clock.c  common.h  sunrise_calc.c  sunrise_web.c
files/apps/Compass/: README  compass.c
files/apps/FlshLite/: flashlight.c
files/apps/HexCalc/: hexcalc.c
files/apps/Light/: light.c
files/apps/Location/: README  location.c
files/apps/Memo/: memo.c
files/apps/Morse/: morse.c
files/apps/Paddle/: paddle.c
files/apps/Reversi/: common.h  cpu.c  reversi.c
files/apps/Template/: template.c
files/apps/Test/: common.h  test.c  test1.c
files/apps/Tilt/: tilt.c
files/apps/Weather/: weather.c
files/svcs/: svcs
files/svcs/Location/: common.h  loc_data.c  location.c  location.h  us.loc
files/svcs/Template/: template.c
linux/: Makefile
src/: README
src/cJSON/: CMakeLists.txt
src/ezapp/: CMakeLists.txt  logging.c  logging.h  main.c  main.h  sdlx.h  sdlx_audio.c  sdlx_event.c  sdlx_misc.c  sdlx_sensor.c  sdlx_video.c  std_hdrs.h  svcs.c  svcs.h  svcs_stubs.c  utils.c  utils.h  utils_android.cpp
src/lame/: CMakeLists.txt
src/lame/libmp3lame/: CMakeLists.txt  config.h
src/lodepng/: CMakeLists.txt  lodepng.c
src/picoc/: expression.c  interpreter.h  picoc_ezapp.c  platform.h
src/picoc/cstdlib/: math.c  stdio.c  stdlib.c  string.c  time.c  unistd.c
src/picoc/include/: picoc_ezapp.h
src/picoc/platform/: library_unix.c
src/testlib/: CMakeLists.txt
src/testlib/include/: testlib.h
src/testlib/src/: testlib.c
src/testprog/: CMakeLists.txt  main.c
